--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Team-DaVinci/Questions-Answers#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "compression": "^1.7.4",
     "express": "^4.17.1",
     "mongoose": "^5.13.6",
     "nodemon": "^2.0.12",
